update pkgdown options

--- a/vignettes/interface-options.Rmd
+++ b/vignettes/interface-options.Rmd
@@ -34,7 +34,7 @@ The JavaScript / WebAssembly tooling comes from Aman Gupta Karmani's great work 
 
 The JavaScript / WebAssembly files are updated soon after the NBER updates the Fortran code that runs TAXSIM 35. We will then incorporate these updated JavaScript / WebAssembly files into a new version of `usincometaxes`. A benefit of this approach is that a given version of `usincometaxes` will always produce the same results when using 'wasm'. This holds because a given version of `usincometaxes` will always use the exact same JavaScript / WebAssembly files to calculate taxes. This might not always be true with 'ssh' or 'http' since the calculations are conducted on the NBER's servers. Changes to the NBER's TASXIM program running on these servers will not correlate with version changes to `usincometaxes`. Therefore, 'wasm' is a great option if reproducibility is paramount.
 
-`usincometaxes`s [changelog](https://www.shaneorr.io/r/usincometaxes/news/index.html) will note when a version changes due to an update to the JavaScript / WebAssembly files. That way, you can check if you are using the version of `usincometaxes` with the most recent JavaScript / WebAssembly files and reinstall `usincometaxes` if this is not the case. As a reminder, the following code lets you check package versions: `packageVersion("usincometaxes")`.
+`usincometaxes`'s [changelog](https://www.shaneorr.io/r/usincometaxes/news/index.html) will note when a version changes due to an update to the JavaScript / WebAssembly files. That way, you can check if you are using the version of `usincometaxes` with the most recent JavaScript / WebAssembly files and reinstall `usincometaxes` if this is not the case. As a reminder, the following code lets you check package versions: `packageVersion("usincometaxes")`.
 
 ### 2. 'ssh'
 
