--- a/README.Rmd
+++ b/README.Rmd
@@ -57,11 +57,11 @@ family_income <- data.frame(
   page = c(26, 36) # primary age
 )
 
-family_taxes <- taxsim_calculate_taxes(
-  .data = family_income,
-  marginal_tax_rates = 'Wages',
+# family_taxes <- taxsim_calculate_taxes(
+  .data = family_income#,
+  marginal_tax_rates = 'Wages'#,
   return_all_information = FALSE
-)
+# )
 ```
 
 ```{r}
