add ssh for taxsimtest

--- a/README.Rmd
+++ b/README.Rmd
@@ -51,7 +51,7 @@ library(usincometaxes)
 family_income <- data.frame(
   taxsimid = c(1, 2),
   state = c('North Carolina', 'NY'),
-  year = c(2015, 2020),
+  year = c(2015, 2024),
   mstat = c('married, jointly', 'single'),
   pwages = c(50000, 100000),  # primary wages
   page = c(26, 36) # primary age
@@ -60,7 +60,8 @@ family_income <- data.frame(
 family_taxes <- taxsim_calculate_taxes(
   .data = family_income,
   marginal_tax_rates = 'Wages',
-  return_all_information = FALSE
+  return_all_information = FALSE,
+  upload_type = "ssh"
 )
 ```
 
